==> micropython/micropython/ports/psoc6/machine_uart.c <==
#include "py/mphal.h"
#include "py/mperrno.h"
#include "py/ringbuf.h"
#include "py/runtime.h"
#include "shared/runtime/interrupt_char.h"
#include "shared/runtime/mpirq.h"
#include "cybsp.h"
#include "cyhal.h"
#include "modmachine.h"
#include "machine_pin_phy.h"
#include "mplogger.h"
#define UART_HWCONTROL_RTS  (1)
#define UART_HWCONTROL_CTS  (2)
#define MAX_UART             10 // TODO: Change as per bsp?
#define DEFAULT_UART_PIN    (MP_ROM_QSTR(MP_QSTR_NC))
#define MP_UART_ALLOWED_FLAGS (CYHAL_UART_IRQ_TX_EMPTY | CYHAL_UART_IRQ_TX_DONE | CYHAL_UART_IRQ_RX_FULL | CYHAL_UART_IRQ_RX_DONE)
#define uart_assert_raise_val(msg, ret)   if (ret != CY_RSLT_SUCCESS) { \
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT(msg), ret); \
}
#define MICROPY_PY_MACHINE_UART_CLASS_CONSTANTS \
    { MP_ROM_QSTR(MP_QSTR_RTS), MP_ROM_INT(UART_HWCONTROL_RTS) }, \
    { MP_ROM_QSTR(MP_QSTR_CTS), MP_ROM_INT(UART_HWCONTROL_CTS) }, \
    { MP_ROM_QSTR(MP_QSTR_TX_EMPTY), MP_ROM_INT(CYHAL_UART_IRQ_TX_EMPTY) }, \
    { MP_ROM_QSTR(MP_QSTR_TX_DONE), MP_ROM_INT(CYHAL_UART_IRQ_TX_DONE) }, \
    { MP_ROM_QSTR(MP_QSTR_RX_FULL), MP_ROM_INT(CYHAL_UART_IRQ_RX_FULL) }, \
    { MP_ROM_QSTR(MP_QSTR_RX_DONE), MP_ROM_INT(CYHAL_UART_IRQ_RX_DONE) }, \

static void mp_machine_uart_init_helper(machine_uart_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_baudrate, ARG_bits, ARG_parity, ARG_stop, ARG_tx, ARG_rx, ARG_timeout, ARG_rxbuf, ARG_flow, ARG_rts, ARG_cts };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_baudrate, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_bits, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_parity, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_INT(-1)} },
        { MP_QSTR_stop, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_tx, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_rx, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_timeout, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_rxbuf, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_flow, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_rts, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = DEFAULT_UART_PIN} },
        { MP_QSTR_cts, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = DEFAULT_UART_PIN} },
    };

    // Parse args.
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);
    bool enable_rts = 0;
    bool enable_cts = 0;


    // Set baudrate if configured.
    if (args[ARG_baudrate].u_int > 0) {
        self->baudrate = args[ARG_baudrate].u_int;
    } else {
        if (self->init_flag == 0) {
            mp_raise_TypeError(MP_ERROR_TEXT("baudrate must be provided"));
        }
    }

    // Set bits if configured.
    if (args[ARG_bits].u_int > 0) {
        self->bits = args[ARG_bits].u_int;
    } else {
        if (self->init_flag == 0) {
            mp_raise_TypeError(MP_ERROR_TEXT("bits must be provided"));
        }
    }

    // Set parity if configured.
    if (args[ARG_parity].u_obj != MP_OBJ_NEW_SMALL_INT(-1)) {
        if (args[ARG_parity].u_obj == mp_const_none) {
            self->parity = 0;
        } else if (mp_obj_get_int(args[ARG_parity].u_obj) & 1) {
            self->parity = 1;  // odd
        } else {
            self->parity = 2;  // even
        }
    }

    // Set stop bits if configured.
    if (args[ARG_stop].u_int > 0) {
        self->stop = (args[ARG_stop].u_int);
    } else {
        if (self->init_flag == 0) {
            mp_raise_TypeError(MP_ERROR_TEXT("stop bits must be provided"));
        }
    }

    // Set TX/RX pins if configured.
    if (args[ARG_tx].u_obj != mp_const_none) {
        uart_tx_alloc(self, args[ARG_tx].u_obj);
    } else {
        if (self->init_flag == 0) {
            mp_raise_TypeError(MP_ERROR_TEXT("tx pin must be provided"));
        }
    }

    if (args[ARG_rx].u_obj != mp_const_none) {
        uart_rx_alloc(self, args[ARG_rx].u_obj);
    } else {
        if (self->init_flag == 0) {
            mp_raise_TypeError(MP_ERROR_TEXT("rx pin must be provided"));
        }
    }

    // Set CTS/RTS pins if configured.
    if (args[ARG_rts].u_obj != mp_const_none) {
        uart_rts_alloc(self, args[ARG_rts].u_obj);
    }

    if (args[ARG_cts].u_obj != mp_const_none) {
        uart_cts_alloc(self, args[ARG_cts].u_obj);
    }

    // Set hardware flow control if configured.
    if (args[ARG_flow].u_int >= 1) {
        if (args[ARG_flow].u_int & ~(UART_HWCONTROL_CTS | UART_HWCONTROL_RTS)) {
            mp_raise_ValueError(MP_ERROR_TEXT("bad hardware flow control mask"));
        }
        self->flow = args[ARG_flow].u_int;
    }

    self->interrupt = 0;
    self->mp_irq_trigger = 0;
    self->mp_irq_obj = NULL;

    // initialise UART at cyhal level
    if (n_args > 0 || kw_args->used > 0) {
        uart_init(self);

        // Configure UART RX software buffer, which will extend the hardware RX FIFO buffer only for SW async mode.
        if (args[ARG_rxbuf].u_int > 0) {
            self->rxbuf = args[ARG_rxbuf].u_int;
            uint8_t rx_buf[self->rxbuf];
            cy_rslt_t result = cyhal_uart_config_software_buffer(&self->uart_obj, rx_buf, self->rxbuf);
            uart_assert_raise_val("Configuring the UART RX software buffer failed with return code %lx !", result);
        }

        if (self->flow & UART_HWCONTROL_CTS) {
            enable_rts = 1;
        }
        if (self->flow & UART_HWCONTROL_RTS) {
            enable_cts = 1;
        }
        cy_rslt_t result = cyhal_uart_enable_flow_control(&self->uart_obj, enable_cts, enable_rts);
        uart_assert_raise_val("Configuring the UART for flow control failed with return code %lx !", result);
    }
}

static void mp_machine_uart_deinit(machine_uart_obj_t *self) {
    cyhal_uart_free(&(self->uart_obj));
    uart_tx_free(self);
    uart_rx_free(self);
    uart_cts_free(self);
    uart_rts_free(self);
    uart_obj_free(self);
}

static mp_int_t mp_machine_uart_any(machine_uart_obj_t *self) {
    return cyhal_uart_readable(&self->uart_obj);

}

static bool mp_machine_uart_txdone(machine_uart_obj_t *self) {
    return !(cyhal_uart_is_tx_active(&self->uart_obj));

}

static void mp_machine_uart_sendbreak(machine_uart_obj_t *self) {
    uint32_t breakwidth = 4;  // Width of break condition. Valid range is the TX data width (4 to 16 bits). How to get that?
    Cy_SCB_UART_SendBreakBlocking(self->uart_obj.base, breakwidth);
}

static mp_uint_t mp_machine_uart_read(mp_obj_t self_in, void *buf_in, mp_uint_t size, int *errcode) {
    machine_uart_obj_t *self = MP_OBJ_TO_PTR(self_in);
    void *dest = buf_in;
    size_t rx_length = size;
    if (self->interrupt == 1) {
        cy_rslt_t result = cyhal_uart_read_async(&self->uart_obj, dest, rx_length);
        if (result != CY_RSLT_SUCCESS) {
            *errcode = MP_EAGAIN;
            return MP_STREAM_ERROR;
        }
    } else {
        cyhal_uart_read(&self->uart_obj, dest, &rx_length);
    }
    if (rx_length <= 0) {
        *errcode = MP_EAGAIN;
        return MP_STREAM_ERROR;
    }
    return rx_length;
}

static mp_uint_t mp_machine_uart_write(mp_obj_t self_in, const void *buf_in, mp_uint_t size, int *errcode) {
    machine_uart_obj_t *self = MP_OBJ_TO_PTR(self_in);
    size_t tx_length = size;
    if (self->interrupt == 1) {
        cyhal_uart_write_async(&self->uart_obj, (void *)buf_in, tx_length);
    } else {
        cyhal_uart_write(&self->uart_obj, (void *)buf_in, &tx_length);
    }
    if (tx_length < 0) {
        *errcode = MP_EAGAIN;
        return MP_STREAM_ERROR;
    }
    return tx_length;
}

static mp_uint_t mp_machine_uart_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    machine_uart_obj_t *self = self_in;
    mp_uint_t ret;
    if (request == MP_STREAM_POLL) {           // Need to understand the select
        mp_uint_t flags = arg;
        ret = 0;
        if ((flags & MP_STREAM_POLL_RD) && cyhal_uart_readable(&self->uart_obj)) {
            ret |= MP_STREAM_POLL_RD;
        }
        if ((flags & MP_STREAM_POLL_WR) && cyhal_uart_writable(&self->uart_obj)) {
            ret |= MP_STREAM_POLL_WR;
        }
    } else if (request == MP_STREAM_FLUSH) {
        // Since uart.write() waits up to the last byte, uart.flush() always succeeds.
        ret = 0;
    } else {
        *errcode = MP_EINVAL;
        ret = MP_STREAM_ERROR;
    }
    return ret;
}
